elm: readme was updated with references to guide.elm-lang.org and to some useful packages.

--- a/programming/elm/index.html
+++ b/programming/elm/index.html
@@ -11,6 +11,28 @@
 <body class="article">
 <div id="header">
 <h1>Elm</h1>
+<div id="toc" class="toc">
+<div id="toctitle">Table of Contents</div>
+<ul class="sectlevel1">
+<li><a href="#_references">References</a></li>
+<li><a href="#_try_elm_online_editor">Try Elm! Online Editor</a></li>
+<li><a href="#_installation">Installation</a></li>
+<li><a href="#_syntax">Syntax</a></li>
+<li><a href="#_packages">Packages</a>
+<ul class="sectlevel2">
+<li><a href="#_core_libraries">Core Libraries</a></li>
+<li><a href="#_json_in_elm">JSON in Elm</a></li>
+<li><a href="#_parser">Parser</a></li>
+<li><a href="#_html">Html</a></li>
+<li><a href="#_http">Http</a></li>
+<li><a href="#_work_with_urls">Work with URLs</a></li>
+<li><a href="#_browser">Browser</a></li>
+<li><a href="#_edutainmentliveelm_dropdown">EdutainmentLIVE/elm-dropdown</a></li>
+</ul>
+</li>
+<li><a href="#_project">Project</a></li>
+</ul>
+</div>
 </div>
 <div id="content">
 <div id="preamble">
@@ -50,6 +72,18 @@ Elm is a functional programming language for declaratively creating web browser 
 </div>
 </div>
 <div class="sect1">
+<h2 id="_references">References</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://guide.elm-lang.org/" class="bare">guide.elm-lang.org/</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_try_elm_online_editor"><a href="https://elm-lang.org/try">Try Elm! Online Editor</a></h2>
 <div class="sectionbody">
 
@@ -79,51 +113,62 @@ Elm is a functional programming language for declaratively creating web browser 
 </div>
 </div>
 <div class="sect1">
-<h2 id="_core_libraries"><a href="https://package.elm-lang.org/packages/elm/core/latest/">Core Libraries</a></h2>
-<div class="sectionbody">
-<div class="sect2">
-<h3 id="_basics"><a href="https://package.elm-lang.org/packages/elm/core/latest/Basics">Basics</a></h3>
-
-</div>
-<div class="sect2">
-<h3 id="_tuple"><a href="https://package.elm-lang.org/packages/elm/core/latest/Tuple">Tuple</a></h3>
-
-</div>
-<div class="sect2">
-<h3 id="_maybe"><a href="https://package.elm-lang.org/packages/elm/core/latest/Maybe">Maybe</a></h3>
-
-</div>
-<div class="sect2">
-<h3 id="_list"><a href="https://package.elm-lang.org/packages/elm/core/latest/List">List</a></h3>
-
-</div>
-<div class="sect2">
-<h3 id="_string"><a href="https://package.elm-lang.org/packages/elm/core/latest/String">String</a></h3>
-
-</div>
-<div class="sect2">
-<h3 id="_dict"><a href="https://package.elm-lang.org/packages/elm/core/latest/Dict">Dict</a></h3>
-
-</div>
-<div class="sect2">
-<h3 id="_debug"><a href="https://package.elm-lang.org/packages/elm/core/latest/Debug">Debug</a></h3>
-
-</div>
-</div>
-</div>
-<div class="sect1">
 <h2 id="_packages">Packages</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_core_libraries"><a href="https://package.elm-lang.org/packages/elm/core/latest/">Core Libraries</a></h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://package.elm-lang.org/packages/elm/core/latest/Basics">Basics</a></p>
+</li>
+<li>
+<p><a href="https://package.elm-lang.org/packages/elm/core/latest/Tuple">Tuple</a></p>
+</li>
+<li>
+<p><a href="https://package.elm-lang.org/packages/elm/core/latest/Maybe">Maybe</a></p>
+</li>
+<li>
+<p><a href="https://package.elm-lang.org/packages/elm/core/latest/List">List</a></p>
+</li>
+<li>
+<p><a href="https://package.elm-lang.org/packages/elm/core/latest/String">String</a></p>
+</li>
+<li>
+<p><a href="https://package.elm-lang.org/packages/elm/core/latest/Dict">Dict</a></p>
+</li>
+<li>
+<p><a href="https://package.elm-lang.org/packages/elm/core/latest/Debug">Debug</a></p>
+</li>
+</ul>
+</div>
+</div>
 <div class="sect2">
 <h3 id="_json_in_elm"><a href="https://package.elm-lang.org/packages/elm/json/latest/">JSON in Elm</a></h3>
 
 </div>
 <div class="sect2">
-<h3 id="_parser"><a href="https://package.elm-lang.org/packages/elm/parser/latest/Parser">Parser</a></h3>
+<h3 id="_parser"><a href="https://package.elm-lang.org/packages/elm/parser/latest/">Parser</a></h3>
 
 </div>
 <div class="sect2">
-<h3 id="_html"><a href="https://package.elm-lang.org/packages/elm/html/latest/Html">Html</a></h3>
+<h3 id="_html"><a href="https://package.elm-lang.org/packages/elm/html/latest/">Html</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="_http"><a href="https://package.elm-lang.org/packages/elm/http/latest/">Http</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="_work_with_urls"><a href="https://package.elm-lang.org/packages/elm/url/latest/">Work with URLs</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="_browser"><a href="https://package.elm-lang.org/packages/elm/browser/latest/">Browser</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="_edutainmentliveelm_dropdown"><a href="https://package.elm-lang.org/packages/EdutainmentLIVE/elm-dropdown/latest/">EdutainmentLIVE/elm-dropdown</a></h3>
 
 </div>
 </div>
@@ -149,7 +194,7 @@ elm install elm/parser</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-07 21:42:59 +0200
+Last updated 2023-05-18 14:24:34 +0200
 </div>
 </div>
 </body>
