unix: readme was updated with references to The UNIX Programming Environment and GNU Manuals Online.

--- a/tools/unix/index.html
+++ b/tools/unix/index.html
@@ -151,7 +151,13 @@ Unix (/ˈjuːnɪks/; trademarked as UNIX) is a family of multitasking, multiuser
 <div class="ulist bibliography">
 <ul class="bibliography">
 <li>
+<p><a id="unix-programming-enviornment"></a>[unix-programming-enviornment] <a href="https://archive.org/details/UnixProgrammingEnviornment/">The UNIX Programming Enviornment by Brian W. Kernigan, Rob Pike</a></p>
+</li>
+<li>
 <p><a id="POSIX-2017"></a>[POSIX-2017] <a href="https://pubs.opengroup.org/onlinepubs/9699919799.2018edition/">POSIX.1-2017</a></p>
+</li>
+<li>
+<p><a id="gnu-packages"></a>[gnu-packages] <a href="https://www.gnu.org/manual/">GNU Manuals Online</a></p>
 </li>
 <li>
 <p><a id="coreutils"></a>[coreutils] <a href="https://www.gnu.org/software/coreutils/manual/coreutils.html">GNU Coreutils 9.3</a></p>
@@ -1941,7 +1947,7 @@ sed is a stream editor. A stream editor is used to perform basic text transforma
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-08 23:06:29 +0200
+Last updated 2023-05-20 12:19:42 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
