--- a/programming/elm/index.html
+++ b/programming/elm/index.html
@@ -65,6 +65,12 @@ Elm is a functional programming language for declaratively creating web browser 
 <li>
 <p><a href="https://www.schoolofhaskell.com/user/griba/elm-from-a-haskell-perspective" class="bare">www.schoolofhaskell.com/user/griba/elm-from-a-haskell-perspective</a></p>
 </li>
+<li>
+<p><a href="https://gist.github.com/yang-wei/4f563fbf81ff843e8b1e">Elm Destructuring (or Pattern Matching) cheatsheet</a></p>
+</li>
+<li>
+<p><a href="http://sporto.github.io/elm-patterns/" class="bare">sporto.github.io/elm-patterns/</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -194,7 +200,7 @@ elm install elm/parser</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-18 14:24:34 +0200
+Last updated 2023-05-19 22:25:27 +0200
 </div>
 </div>
 </body>
