neovim: a link to the official documentation was added to the readme.

--- a/tools/neovim/index.html
+++ b/tools/neovim/index.html
@@ -33,6 +33,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p><a href="https://neovim.io/doc/user/" class="bare">neovim.io/doc/user/</a></p>
+</li>
+<li>
 <p><a href="https://www.youtube.com/watch?v=gnupOrSEikQ">How to Configure Vim like VSCode (benawad)</a></p>
 <div class="ulist">
 <ul>
@@ -164,7 +167,7 @@ call plug#end()</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-08 23:51:40 +0200
+Last updated 2023-05-16 20:49:04 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
