unix: fzf, debian reference and suckless.org were added to the todo section.

--- a/tools/unix/index.html
+++ b/tools/unix/index.html
@@ -127,19 +127,41 @@ Unix (/ˈjuːnɪks/; trademarked as UNIX) is a family of multitasking, multiuser
 <details>
 <summary class="title">TODO</summary>
 <div class="content">
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>xargs</p>
 <div class="ulist">
 <ul>
-<li>
-<p><a href="https://unix.stackexchange.com/questions/275684/how-do-i-automate-to-display-cursor-under-the-prompt-on-shell">Displey cursore under the prompt</a></p>
-</li>
 <li>
 <p><code>ls | xargs -I {} echo {}</code></p>
 </li>
 </ul>
 </div>
-<div class="paragraph">
-<div class="title"><a href="https://unix.stackexchange.com/questions/12453/how-to-determine-linux-kernel-architecture" class="bare">https://unix.stackexchange.com/questions/12453/how-to-determine-linux-kernel-architecture</a></div>
-<p>uname -a</p>
+</li>
+<li>
+<p><a href="https://unix.stackexchange.com/questions/12453/how-to-determine-linux-kernel-architecture" class="bare">https://unix.stackexchange.com/questions/12453/how-to-determine-linux-kernel-architecture</a></p>
+<div class="ulist">
+<ul>
+<li>
+<p><code>uname -a</code></p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p><a href="https://github.com/junegunn/fzf">fzf command-line fuzzy finder</a></p>
+</li>
+<li>
+<p><a href="https://www.debian.org/doc/manuals/debian-reference/" class="bare">https://www.debian.org/doc/manuals/debian-reference/</a></p>
+</li>
+<li>
+<p><a href="https://unix.stackexchange.com/questions/275684/how-do-i-automate-to-display-cursor-under-the-prompt-on-shell">Displey cursore under the prompt</a></p>
+</li>
+<li>
+<p><a href="https://suckless.org/">suckless.org software for X window system</a></p>
+</li>
+</ol>
 </div>
 </div>
 </details>
@@ -1947,7 +1969,7 @@ sed is a stream editor. A stream editor is used to perform basic text transforma
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-20 12:19:42 +0200
+Last updated 2023-05-20 19:27:20 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
