programming: Languages worth mentioning section of the readme was updated.

--- a/programming/index.html
+++ b/programming/index.html
@@ -21,7 +21,17 @@
 <li><a href="#_first_class_citizen">First-class Citizen</a></li>
 </ul>
 </li>
-<li><a href="#_languages_worth_mentioning">Languages Worth Mentioning</a></li>
+<li><a href="#_languages_worth_mentioning">Languages Worth Mentioning</a>
+<ul class="sectlevel2">
+<li><a href="#_assembly_language">Assembly language</a></li>
+<li><a href="#_system_languages">System languages</a></li>
+<li><a href="#_command_line_interpreters">Command-line interpreters</a></li>
+<li><a href="#_javascript">JavaScript</a></li>
+<li><a href="#_general_purpose_programming_language">General-purpose programming language</a></li>
+<li><a href="#_purely_functional">Purely functional</a></li>
+<li><a href="#_array_oriented">Array oriented</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -258,13 +268,17 @@ In programming language design, a <strong>first-class</strong> citizen (also typ
 <div class="sect1">
 <h2 id="_languages_worth_mentioning">Languages Worth Mentioning</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_assembly_language"><a href="https://en.wikipedia.org/wiki/Assembly_language">Assembly language</a></h3>
+<div class="paragraph">
+<p>First abstraction above machine code.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_system_languages"><a href="https://en.wikipedia.org/wiki/System_programming_language">System languages</a></h3>
 <div class="dlist">
 <dl>
-<dt class="hdlist1">Assembly language</dt>
-<dd>
-<p>First abstraction above machine code.</p>
-</dd>
-<dt class="hdlist1">C</dt>
+<dt class="hdlist1"><a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a></dt>
 <dd>
 <p>One of the most successful languages of all time.
 I believe, most of the programming languages are written in the C language.
@@ -280,33 +294,37 @@ You can sense C&#8217;s at the time popularity from the song <a href="https://yo
 Memory safety is done by borrow checker.
 Is another language that made it to the Linux kernel source code.</p>
 </dd>
+</dl>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_command_line_interpreters"><a href="https://en.wikipedia.org/wiki/List_of_command-line_interpreters">Command-line interpreters</a></h3>
+<div class="dlist">
+<dl>
 <dt class="hdlist1"><a href="zsh">Z shell</a></dt>
 <dd>
 <p>Z Shell is a great option for interactive login shell, extends the Bourne Shell.</p>
 </dd>
-<dt class="hdlist1">JavaScript</dt>
-<dd>
+</dl>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_javascript"><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a></h3>
+<div class="paragraph">
 <p>The programming language of the web.</p>
-</dd>
-<dt class="hdlist1"><a href="https://www.typescriptlang.org/">TypeScript</a></dt>
-<dd>
-<p>Typed superset of JavaScript developed by Microsoft.</p>
-</dd>
-<dt class="hdlist1"><a href="haskell">Haskell</a></dt>
-<dd>
-<p>Lazily evaluated purely-functional language with type classes.</p>
-</dd>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_general_purpose_programming_language"><a href="https://en.wikipedia.org/wiki/General-purpose_programming_language">General-purpose programming language</a></h3>
+<div class="dlist">
+<dl>
 <dt class="hdlist1"><a href="https://www.python.org/">Python</a></dt>
 <dd>
 <p>Second most used programming language with very pleasant syntax.</p>
 </dd>
-<dt class="hdlist1"><a href="https://julialang.org/">Julia</a></dt>
+<dt class="hdlist1"><a href="https://www.typescriptlang.org/">TypeScript</a></dt>
 <dd>
-<p>Great (array) language for mathematics that runs fast (jit).</p>
-</dd>
-<dt class="hdlist1"><a href="bqn">BQN</a></dt>
-<dd>
-<p>Iversonian language, by Marshall Lochbaum who started in J and implemented a lot of Dyalog APL himself.</p>
+<p>Typed superset of JavaScript developed by Microsoft.</p>
 </dd>
 <dt class="hdlist1"><a href="https://www.raku.org/">Raku</a></dt>
 <dd>
@@ -316,11 +334,42 @@ When regular expressions are not powerful enough, look at Raku&#8217;s <a href="
 </dl>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_purely_functional"><a href="https://en.wikipedia.org/wiki/Purely_functional_programming">Purely functional</a></h3>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><a href="haskell">Haskell</a></dt>
+<dd>
+<p>Lazily evaluated purely-functional language with type classes.</p>
+</dd>
+<dt class="hdlist1"><a href="https://www.idris-lang.org/">Idris2</a></dt>
+<dd>
+<p>Idris is a programming language designed to encourage Type-Driven Development.</p>
+</dd>
+</dl>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_array_oriented"><a href="https://en.wikipedia.org/wiki/Array_programming">Array oriented</a></h3>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><a href="https://julialang.org/">Julia</a></dt>
+<dd>
+<p>Great (array) language for mathematics that runs fast (jit).</p>
+</dd>
+<dt class="hdlist1"><a href="bqn">BQN</a></dt>
+<dd>
+<p>Iversonian language, by Marshall Lochbaum who started in J and implemented a lot of Dyalog APL himself.</p>
+</dd>
+</dl>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-06 10:53:16 +0200
+Last updated 2023-05-21 14:37:46 +0200
 </div>
 </div>
 </body>
