--- a/data/index.html
+++ b/data/index.html
@@ -22,11 +22,7 @@
 <li><a href="#_bom">BOM</a></li>
 </ul>
 </li>
-<li><a href="#_conversion_between_formats">Conversion Between Formats</a>
-<ul class="sectlevel2">
-<li><a href="#_pandoc_a_universal_document_converter">Pandoc a universal document converter</a></li>
-</ul>
-</li>
+<li><a href="#_conversion_between_formats">Conversion Between Formats</a></li>
 </ul>
 </div>
 </div>
@@ -123,61 +119,20 @@ The byte order mark (BOM) is a particular usage of the special Unicode character
 It can be done automatically using a conversion tool.
 When the target format has equal or greater expression power the conversion is lossless.</p>
 </div>
-<div class="sect2">
-<h3 id="_pandoc_a_universal_document_converter"><a href="https://pandoc.org/">Pandoc a universal document converter</a></h3>
-<div class="listingblock">
-<div class="title">Installation</div>
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">wget "https://github.com/jgm/pandoc/releases/download/2.11.4/pandoc-2.11.4-1-amd64.deb"
-sudo dpkg -i pandoc-2.11.4-1-amd64.deb</code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p><a href="https://github.com/jgm/pandoc/releases/">Pandoc releases (github.com)</a></p>
-</div>
-<div class="paragraph">
-<p><strong>Basic usage</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://pandoc.org/demos.html">Demos (pandoc.org)</a></p>
-</li>
-</ul>
-</div>
-<div class="listingblock">
-<div class="title">Convert markdown to PDF</div>
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">pandoc report.md --pdf-engine=xelatex -o report.pdf</code></pre>
-</div>
-</div>
-<div class="listingblock">
-<div class="title">Convert markdown to HTML</div>
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell"># HTML fragment (plain html)
-pandoc page.md -o page.html
-
-# HTML with style (-s for standalone)
-pandoc -s page.md -o page.html
-
-# Add advanced LaTeX math
-pandoc -s page.md --mathjax -o page.html</code></pre>
-</div>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://tex.stackexchange.com/questions/551960/pandoc-cannot-parse-equation-with-a-fraction">use --mathjax (tex.stackexchange.com)</a></p>
-</li>
-</ul>
-</div>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><a href="pandoc">Pandoc</a></dt>
+<dd>
+<p>A universal document converter.</p>
+</dd>
+</dl>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-18 18:43:29 +0200
+Last updated 2023-05-21 14:41:59 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
