--- a/data/enterprise-data-warehouses/index.html
+++ b/data/enterprise-data-warehouses/index.html
@@ -48,11 +48,7 @@
 </ul>
 </li>
 <li><a href="#_exercise_pharmacy_modeling">Exercise - Pharmacy Modeling</a></li>
-<li><a href="#_etl_tools">ETL Tools</a>
-<ul class="sectlevel2">
-<li><a href="#_pentaho_data_integration">Pentaho Data Integration</a></li>
-</ul>
-</li>
+<li><a href="#_etl_tools">ETL Tools</a></li>
 <li><a href="#_visualization_tools">Visualization Tools</a>
 <ul class="sectlevel2">
 <li><a href="#_recommendations">Recommendations</a></li>
@@ -1099,177 +1095,6 @@ On update it reloads the data.</p>
 * ssis (only when skilled person)
 * pentaho</p>
 </div>
-<div class="sect2">
-<h3 id="_pentaho_data_integration">Pentaho Data Integration</h3>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://www.hitachivantara.com/en-us/pdf/implementation-guide/three-steps-to-install-pentaho-data-integration-ce.pdf" class="bare">www.hitachivantara.com/en-us/pdf/implementation-guide/three-steps-to-install-pentaho-data-integration-ce.pdf</a></p>
-</li>
-<li>
-<p><a href="https://sourceforge.net/projects/pentaho/files/Data%20Integration/6.0/pdi-ce-6.0.0.0-353.zip/download" class="bare">sourceforge.net/projects/pentaho/files/Data%20Integration/6.0/pdi-ce-6.0.0.0-353.zip/download</a></p>
-<div class="dlist">
-<dl>
-<dt class="hdlist1">Create connection between elements</dt>
-<dd>
-<p>Hold <kbd>shift</kbd>, right click element FROM, right click element TO.</p>
-</dd>
-<dt class="hdlist1">Align elements</dt>
-<dd>
-<p>Select elements with mouse. Press <span class="keyseq"><kbd>ctrl</kbd>+<kbd>up</kbd></span> (or other direction).</p>
-</dd>
-</dl>
-</div>
-</li>
-</ul>
-</div>
-<div class="paragraph">
-<p><strong>Transformations</strong></p>
-</div>
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Use variables in filenames e.g. <code>${root_path}/</code>.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Edit &#8594; Set environment variables</p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>In transformation, right click &#8594; properties &#8594; miscellaneous</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Check: Make the transformation database transactional.</p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>Pentaho always searches for the minimal value of a sequence.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>When having new table, add dummy line with sequence number set to 0.</p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>Input &#8594; CSV file input</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Lazy conversion - turn off (when troubles with conversions try switching it).</p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>Input &#8594; Table input</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Get SQL select statement.</p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>Transformation</p>
-<div class="ulist">
-<ul>
-<li>
-<p>&#8594; Value mapper</p>
-</li>
-<li>
-<p>&#8594; Select values</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Press Get fields to select</p>
-</li>
-<li>
-<p>Selects subset of fields and renames them (do based on Logical Data Map).</p>
-</li>
-<li>
-<p>Delete unwanted fields using kdb:[del].</p>
-</li>
-<li>
-<p>Reorder the fields using kdb:[ctrl+up] (or down).</p>
-</li>
-</ul>
-</div>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>Data Warehouse</p>
-<div class="olist loweralpha">
-<ol class="loweralpha" type="a">
-<li>
-<p>&#8594; Dimension lookup/update</p>
-<div class="ulist">
-<ul>
-<li>
-<p>For historization</p>
-</li>
-<li>
-<p>Last update field - type of dimensions update = date of last update.</p>
-</li>
-<li>
-<p>Technical key, Use sequence</p>
-</li>
-<li>
-<p>Stream datefield, use it when you want historize dates based on data
-just the date of the transformation run.</p>
-</li>
-</ul>
-</div>
-</li>
-</ol>
-</div>
-</li>
-<li>
-<p>Output &#8594; Table output</p>
-<div class="ulist">
-<ul>
-<li>
-<p>For stage database set Truncate table ON</p>
-</li>
-</ul>
-</div>
-</li>
-</ol>
-</div>
-<div class="paragraph">
-<p><strong>Jobs</strong></p>
-</div>
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Design &#8594; General</p>
-<div class="olist loweralpha">
-<ol class="loweralpha" type="a">
-<li>
-<p>&#8594; START</p>
-</li>
-<li>
-<p>&#8594; Transformation</p>
-</li>
-<li>
-<p>&#8594; Success</p>
-</li>
-</ol>
-</div>
-</li>
-</ol>
-</div>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -1441,7 +1266,7 @@ Your data tells a story. Tell it with R Markdown. Turn your analyses into high q
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-06 12:47:15 +0200
+Last updated 2023-05-20 19:29:45 +0200
 </div>
 </div>
 </body>
