--- a/data/postgresql/index.html
+++ b/data/postgresql/index.html
@@ -265,6 +265,13 @@ alter table TABLE_NAME disable trigger all;</code></pre>
 </div>
 </div>
 <div class="listingblock">
+<div class="title"><a href="https://www.postgresql.org/docs/current/sql-copy.html">COPY — copy data between a file and a table</a></div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-sql hljs" data-lang="sql">-- Export table to csv file with a header.
+copy TABLE_NAME to 'path/file.csv' delimiter ',' csv header;</code></pre>
+</div>
+</div>
+<div class="listingblock">
 <div class="title"><a href="https://www.postgresql.org/docs/current/sql-delete.html">DELETE — delete rows of a table</a></div>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-sql hljs" data-lang="sql">delete from TABLE_NAME;</code></pre>
@@ -350,7 +357,7 @@ Key words and unquoted identifiers are case insensitive.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-22 00:35:37 +0200
+Last updated 2023-05-22 12:16:34 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
